[gd_scene load_steps=40 format=2]

[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/npcs/EnemySpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/environment.png" type="Texture" id=3]
[ext_resource path="res://scenes/particles/StarParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://shaders/retro_effects/retro.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/main_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/main_scene.gd" type="Script" id=7]
[ext_resource path="res://scenes/ui/InGameHud.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/game_over.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/power_ups/shield_spawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/power_ups/repair_spawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/ui/button_textures/play_pressed.png" type="Texture" id=12]
[ext_resource path="res://scenes/ui/stats.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/ui/settings.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/ui/source.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/pause.gd" type="Script" id=18]
[ext_resource path="res://assets/images/ranks.png" type="Texture" id=20]
[ext_resource path="res://assets/images/test_stats.png" type="Texture" id=22]
[ext_resource path="res://scenes/ui/pilot_hud.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/ui/dialogue_system.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/power_ups/chip_spawner.tscn" type="PackedScene" id=25]

[sub_resource type="BoxShape" id=23]
extents = Vector3( 2.87195, 3.89436, 3.87092 )

[sub_resource type="PanoramaSky" id=1]
radiance_size = 1
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 62.9
background_energy = 0.5
ambient_light_color = Color( 0.764706, 0.215686, 0.843137, 1 )
ambient_light_energy = 13.95
fog_enabled = true
fog_color = Color( 0.411765, 0, 0.415686, 1 )
glow_enabled = true
glow_intensity = 2.24
glow_strength = 0.78
glow_bloom = 1.0

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 3.28031, 18.2134 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "shake_camera"
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 3.28031, 18.2134 ), Vector3( -1.18385, 3.28031, 18.2134 ), Vector3( -0.71031, 3.28031, 18.2134 ), Vector3( 0.591923, 3.60587, 18.2134 ), Vector3( -1.18385, 3.28031, 18.2134 ), Vector3( -0.71031, 3.28031, 18.2134 ), Vector3( 0.591923, 3.60587, 18.2134 ), Vector3( -0.651119, 2.45162, 18.2134 ), Vector3( -0.71031, 1.94848, 18.2134 ), Vector3( 0, 3.28031, 18.2134 ) ]
}

[sub_resource type="StreamTexture" id=26]
flags = 4
load_path = "res://.import/joystick_locus_outline.png-9f813b9b985b2912757fdfa8bf76f698.stex"

[sub_resource type="StreamTexture" id=27]
flags = 4
load_path = "res://.import/arrow_button_pressed.png-967216cfb207a2240a271d249e0bc1a8.stex"

[sub_resource type="StreamTexture" id=28]
flags = 4
load_path = "res://.import/joystick_locus_outline.png-9f813b9b985b2912757fdfa8bf76f698.stex"

[sub_resource type="StreamTexture" id=29]
flags = 4
load_path = "res://.import/arrow_button_pressed.png-967216cfb207a2240a271d249e0bc1a8.stex"

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="Theme" id=11]
Button/fonts/font = SubResource( 8 )
CheckBox/fonts/font = null
CheckButton/fonts/font = null
ColorPickerButton/fonts/font = null
Fonts/fonts/large = null
Fonts/fonts/normal = SubResource( 6 )
GraphNode/fonts/title_font = null
ItemList/fonts/font = null
Label/fonts/font = SubResource( 4 )
LineEdit/fonts/font = null
LinkButton/fonts/font = null
MenuButton/fonts/font = null
OptionButton/fonts/font = null
PopupMenu/fonts/font = null
PopupMenu/fonts/font_separator = null
ProgressBar/fonts/font = null
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
TabContainer/fonts/font = null
Tabs/fonts/font = null
TextEdit/fonts/font = null
ToolButton/fonts/font = null
TooltipLabel/fonts/font = null
Tree/fonts/font = null
Tree/fonts/title_button_font = null
WindowDialog/fonts/title_font = null

[sub_resource type="DynamicFontData" id=13]
font_path = "res://assets/fonts/American Captain.otf"

[sub_resource type="DynamicFont" id=12]
size = 70
font_data = SubResource( 13 )

[node name="Main" type="Spatial"]
script = ExtResource( 7 )

[node name="Guided" type="Area" parent="." groups=["defense"]]
transform = Transform( 200, 0, 0, 0, 200, 0, 0, 0, 1, 0, 0, -1.58123 )

[node name="CollisionShape" type="CollisionShape" parent="Guided"]
shape = SubResource( 23 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -18.3149 )

[node name="StarParticles" parent="player" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -231.685 )

[node name="Camera" type="Camera" parent="player"]
transform = Transform( 1, 0, 0, 0, 0.98427, 0.176672, 0, -0.176672, 0.98427, 0, 3.28031, 18.2134 )
keep_aspect = 0
fov = 90.0
near = 3.3
far = 300.0

[node name="player" type="AnimationPlayer" parent="player/Camera"]
anims/RESET = SubResource( 31 )
anims/shake_camera = SubResource( 32 )

[node name="Timer" type="Timer" parent="player/Camera"]

[node name="EnemySpawner" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -300 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.345381, 0.938463, 0, -0.938463, 0.345381, 3.42631, 6.23073, -10.2708 )
light_color = Color( 0.545098, 0.270588, 0.584314, 1 )
light_energy = 4.0
light_indirect_energy = 10.0
light_specular = 0.0

[node name="retro_shader" parent="." instance=ExtResource( 5 )]

[node name="TextureRect" parent="retro_shader/CanvasLayer" index="0"]
mouse_filter = 2
texture = ExtResource( 20 )

[node name="main_menu" parent="." instance=ExtResource( 6 )]

[node name="play" parent="main_menu" index="1"]
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="devlog" type="Sprite" parent="."]
visible = false
position = Vector2( 1148.5, 709 )
scale = Vector2( 0.99739, 0.998586 )
texture = ExtResource( 22 )

[node name="source_canvas" type="CanvasLayer" parent="."]
visible = false

[node name="source" parent="source_canvas" instance=ExtResource( 15 )]

[node name="InGameHud" parent="." instance=ExtResource( 8 )]
mouse_filter = 2

[node name="mobile_controls" parent="InGameHud" index="6"]
visible = false

[node name="accept" parent="InGameHud/mobile_controls/directions" index="4"]
normal = SubResource( 26 )
pressed = SubResource( 27 )

[node name="accept_dialog" parent="InGameHud/mobile_controls/directions" index="5"]
normal = SubResource( 28 )
pressed = SubResource( 29 )

[node name="pause" parent="InGameHud/mobile_controls" index="2"]
visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="pause_HUD" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -640.0
margin_right = 960.0
margin_bottom = 640.0
script = ExtResource( 18 )

[node name="ColorRect" type="ColorRect" parent="pause_HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0, 0.0980392, 0.419608 )

[node name="continue" type="Label" parent="pause_HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -272.0
margin_right = 96.0
margin_bottom = -201.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "CONTINUE"
__meta__ = {
"_editor_description_": ""
}

[node name="selector" type="Label" parent="pause_HUD/continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -35.5
margin_right = 124.0
margin_bottom = 35.5
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "[                          ]"
__meta__ = {
"_editor_description_": ""
}

[node name="settings" type="Label" parent="pause_HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_right = 91.0
margin_bottom = 71.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "SETTINGS"
__meta__ = {
"_editor_description_": ""
}

[node name="selector" type="Label" parent="pause_HUD/settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.5
margin_top = -35.5
margin_right = 126.5
margin_bottom = 35.5
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "[                          ]"
__meta__ = {
"_editor_description_": ""
}

[node name="quit" type="Label" parent="pause_HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 256.0
margin_right = 64.0
margin_bottom = 327.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "quit"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="selector" type="Label" parent="pause_HUD/quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -35.5
margin_right = 124.0
margin_bottom = 35.5
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "[                        ]"
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="pause_HUD"]

[node name="GameOver" parent="." instance=ExtResource( 9 )]
pause_mode = 2
visible = false

[node name="notify" parent="GameOver" index="6"]
margin_top = 352.0
margin_bottom = 423.0

[node name="settings" parent="." instance=ExtResource( 14 )]
pause_mode = 2
mouse_filter = 2

[node name="ShieldSpawner" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -300 )

[node name="RepairSpawner" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -195.361 )

[node name="ChipSpawner" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -312.898 )

[node name="Stats" parent="." instance=ExtResource( 13 )]
visible = false

[node name="pilot_hud" parent="." instance=ExtResource( 23 )]

[node name="focus" parent="pilot_hud" index="0"]
mouse_filter = 2

[node name="touch_map" type="CanvasLayer" parent="."]
visible = false

[node name="main_menu" type="Control" parent="touch_map"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="play" type="TextureButton" parent="touch_map/main_menu"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1585.0
margin_top = 794.0
margin_right = -1415.0
margin_bottom = -282.0
texture_pressed = ExtResource( 12 )
expand = true

[node name="dialogue_system" parent="." instance=ExtResource( 24 )]

[connection signal="tree_entered" from="." to="." method="_on_Main_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_Main_tree_exited"]
[connection signal="body_entered" from="Guided" to="." method="_on_Guided_body_entered"]
[connection signal="body_entered" from="player/ShipHealth" to="." method="_on_ShipHealth_body_entered"]

[editable path="player"]
[editable path="retro_shader"]
[editable path="main_menu"]
[editable path="InGameHud"]
[editable path="GameOver"]
[editable path="pilot_hud"]
[editable path="dialogue_system"]
